--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ add_library (crypto mt19937ar.c md5.c)
 add_executable (md5main md5main.c)
 target_link_libraries (md5main crypto)
 find_library(M_LIB m)
-if (${M_LIB})
+if (EXISTS ${M_LIB})
     target_link_libraries (md5main ${M_LIB})
-endif (${M_LIB})
+endif (EXISTS ${M_LIB})
 
 enable_testing()
 add_test (md5 md5main --tests)
