complete rewrite of cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 project (crypto C)
 
-add_library (crypto mt19937ar.c md5.c)
+add_library (${PROJECT_NAME} mt19937ar.c md5.c)
 
 add_executable (md5main md5main.c)
 target_link_libraries (md5main crypto)
@@ -16,3 +16,6 @@ find_package (MSVC QUIET)
 if (${MSVC_FOUND})
     MSVC_CRT_SECURE_NO_WARNINGS (md5main)
 endif (${MSVC_FOUND})
+
+set (CRYPTO_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR} CACHE INTERNAL "Crypto headers")
+set (CRYPTO_LIBRARIES crypto CACHE INTERNAL "crypto libraries")
