fix cmake directory variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,5 @@ if (${MSVC_FOUND})
     MSVC_CRT_SECURE_NO_WARNINGS (md5main)
 endif (${MSVC_FOUND})
 
-set (CRYPTO_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR} CACHE INTERNAL "Crypto headers")
+set (CRYPTO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "Crypto headers")
 set (CRYPTO_LIBRARIES crypto CACHE INTERNAL "crypto libraries")
